# csp-benchmarks

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.MD  benchmark.sh  measure_mem_avg.sh  rust-toolchain.toml
barretenberg/: .gitignore  README.md  _measure_common.sh  bench_props.json  (+10 more)
binius/: Cargo.toml  README.md
binius/benches/: sha256_bench.rs
binius/src/: bench.rs
binius64/: Cargo.toml  README.md
binius64/benches/: keccak_bench.rs  sha256_bench.rs
binius64/src/: binius_examples_copy.rs  lib.rs  utils.rs
binius64/src/circuits/: keccak.rs  mod.rs  sha256.rs
cairo-m/: Cargo.toml  README.md
cairo-m/benches/: sha256_bench.rs
cairo-m/programs/: sha256.cm
cairo-m/src/: lib.rs
circom/: Cargo.toml  README.md  build.rs
circom/benches/: sha256_bench.rs
circom/circuits/sha256/: sha256_1024.circom  sha256_128.circom  sha256_2048.circom  sha256_256.circom  sha256_512.circom  sha256_bytes.circom  sha256_hash.circom
circom/circuits/sha256/sha256_1024/: sha256_1024.cpp  sha256_1024_0001.zkey
circom/circuits/sha256/sha256_128/: sha256_128.cpp  sha256_128_0001.zkey
circom/circuits/sha256/sha256_2048/: sha256_2048.cpp  sha256_2048_0001.zkey
circom/circuits/sha256/sha256_256/: sha256_256.cpp  sha256_256_0001.zkey
circom/circuits/sha256/sha256_512/: sha256_512.cpp  sha256_512_0001.zkey
circom/circuits/sha256_test/: sha256_test.circom
circom/groth16/: multi_test_sha256_groth16.sh  test_sha256_groth16.sh  trusted_setup.sh
circom/src/: lib.rs
ere/miden/: Cargo.toml
ere/miden/benches/: sha256_bench.rs
ere/miden/src/: lib.rs
ere/risc0/: Cargo.toml
ere/risc0/benches/: sha256_bench.rs
ere/risc0/src/: lib.rs
guests/: Cargo.toml
guests/src/: ecdsa.rs  lib.rs  sha2.rs
jolt/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain
jolt/benches/: sha256.rs
jolt/guest/sha256_1024/src/: lib.rs
jolt/guest/sha256_128/src/: lib.rs
jolt/guest/sha256_2048/: Cargo.toml
jolt/guest/sha256_2048/src/: lib.rs
jolt/guest/sha256_256/src/: lib.rs  main.rs
jolt/guest/sha256_512/: Cargo.toml
jolt/guest/sha256_512/src/: lib.rs
jolt/sha2-guest/: Cargo.toml
jolt/sha2-guest/src/: lib.rs
jolt/src/: lib.rs
miden/: Cargo.toml  README.md
miden/benches/: sha256.rs
miden/src/: lib.rs
nexus/: Cargo.toml  README.md  rust-toolchain.toml
nexus/benches/: sha256.rs
nexus/guest/sha256/: Cargo.toml
nexus/guest/sha256/src/: main.rs
nexus/src/: lib.rs
noir/: .gitignore  Cargo.toml  README.md  osx_local_setup.sh  sha256_measure.sh  sha256_prepare.sh  sha256_prove.sh  sha256_verify.sh
noir/benches/: sha256_bench.rs
noir/src/: lib.rs
openvm/: Cargo.toml  README.md
openvm/benches/: sha256.rs
openvm/guest/sha256/: Cargo.toml
openvm/guest/sha256/src/: main.rs
openvm/src/: lib.rs
plonky2/: Cargo.toml  README.md
plonky2/benches/: prove_verify.rs
plonky2/src/: bench.rs  circuit.rs  main.rs
plonky3-powdr/: Cargo.toml  README.md
plonky3-powdr/benches/: prove_verify.rs
plonky3-powdr/guest/: Cargo.toml
plonky3-powdr/guest/src/: main.rs
plonky3-powdr/src/: bench.rs
plonky3-sp1/script/: Cargo.toml
plonky3-sp1/script/benches/: prove_verify.rs
polyhedra-expander/: Cargo.toml  README.md  build.rs  expander_proving.sh
polyhedra-expander/benches/: prove_verify.rs
polyhedra-expander/src/: bench.rs  lib.rs  main.rs  metadata.rs
polyhedra-expander/templates/: sha256_sizes.rs.tpl
provekit/: .gitignore  Cargo.toml  README.md
provekit/benches/: ecdsa.rs  prove_verify.rs  provekit.rs  sha256.rs
provekit/circuits/: Nargo.toml
provekit/circuits/ecdsa/p256_bigcurve/: Nargo.toml  Prover.toml  Readme.md
provekit/circuits/ecdsa/p256_bigcurve/src/: main.nr
provekit/circuits/hash/sha256-provekit/noir-native-sha256/: Nargo.toml
provekit/circuits/hash/sha256-provekit/noir-native-sha256/src/: ryan_sha256_compression.nr  ryan_sha256_noir.nr
provekit/circuits/hash/sha256-provekit/sha256-bench-2048/: Nargo.toml
provekit/circuits/hash/sha256-provekit/sha256-bench-2e10/: Nargo.toml
provekit/circuits/hash/sha256-provekit/sha256-bench-2e10/src/: main.nr
provekit/circuits/hash/sha256-provekit/sha256-bench-2e11/: Nargo.toml
provekit/circuits/hash/sha256-provekit/sha256-bench-2e12/: Nargo.toml
provekit/circuits/hash/sha256-provekit/sha256-bench-2e12/src/: main.nr
provekit/circuits/hash/sha256-provekit/sha256-bench-2e14/: Nargo.toml
provekit/circuits/hash/sha256-provekit/sha256-bench-2e14/src/: main.nr
provekit/circuits/hash/sha256-provekit/sha256-bench-2e8/: Nargo.toml
provekit/circuits/hash/sha256-provekit/sha256-bench-2e8/src/: main.nr
provekit/circuits/hash/sha256-provekit/sha256-bench-2e9/: Nargo.toml
provekit/circuits/hash/sha256-provekit/sha256-bench-2e9/src/: main.nr
provekit/circuits/hash/sha256-provekit/sha256_var_input/src/: main.nr
provekit/src/: bench_sha256.rs  hash_input_gen.rs  lib.rs  setup.rs
risc0/: Cargo.toml  README.md
risc0/benches/: ecdsa.rs  sha256.rs
risc0/guest/ecdsa/: Cargo.toml
risc0/guest/ecdsa/src/: main.rs
risc0/guest/sha256/: Cargo.toml
risc0/guest/sha256/src/: main.rs
risc0/methods/guest/: Cargo.toml
risc0/src/: lib.rs
sp1/: Cargo.toml  README.md
sp1/benches/: sha256.rs
sp1/guest/sha256/: Cargo.toml
sp1/src/: lib.rs
utils/: Cargo.toml
utils/ecdsa_signature/: message.txt  signature.txt  verifying_key.txt
utils/src/: bench.rs  harness.rs  lib.rs  main.rs  metadata.rs  profile.rs  zkvm.rs
utils/src/zkvm/: ecdsa.rs  helpers.rs  instance.rs  sha256.rs  traits.rs
zkvm/: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
zkvm/benches/: sha256.rs
zkvm/guests/jolt/sha256/: Cargo.toml
zkvm/guests/jolt/sha256/src/: lib.rs
zkvm/guests/miden/sha256/: sha256.masm
zkvm/guests/risc0/sha256/: Cargo.toml
zkvm/guests/risc0/sha256/src/: main.rs
zkvm/guests/sp1/sha256/: Cargo.toml
zkvm/guests/sp1/sha256/src/: main.rs
zkvm/scripts/: bench_mem.sh
zkvm/src/: benchmark.rs  cli.rs  lib.rs  main.rs  programs.rs  traits.rs  zkvm.rs
zkvm/src/cli/: storage.rs
zkvm/src/programs/: sha256.rs
(+63 files in other folders)
