[workspace]
resolver = "3"
members = [
    "binius",
    "plonky2",
    "plonky3-powdr",
    "plonky3-sp1/lib",
    "plonky3-sp1/script",
    "provekit",
    "utils",
    "ere/risc0",
    "ere/miden",
    "ere/guests/rust/sha256",
]
exclude = [
    "plonky3-sp1/program", # Should be excluded, compiled for the Succinct toolchain via sp1_helper in script/build.rs
]

[workspace.dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive", "env"] }
criterion = "0.5.1"
env_logger = "0.10.0"
hex = "0.4.3"
itertools = "0.13.0"
log = "0.4.14"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10"
tracing = "0.1.40"

# Workspace
utils = { path = "utils" }
