[workspace]
resolver = "3"
members = [
    "binius",
    "plonky2",
    "plonky3-powdr",
    "provekit",
    "polyhedra-expander",
    "utils",
    "ere/miden",
]
exclude = ["zkvm"]

[workspace.dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive", "env"] }
criterion = "0.5.1"
env_logger = "0.10.0"
hex = "0.4.3"
itertools = "0.13.0"
log = "0.4.14"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10"
tracing = "0.1.40"

# Workspace
utils = { path = "utils" }
