[workspace]
resolver = "3"
members = [
    "binius64",
    "plonky2",
    "openvm",
    "provekit",
    "polyhedra-expander",
    "circom",
    "jolt",
    "miden",
    "risc0",
    "sp1",
    "utils",
]
exclude = [
    "cairo-m",
    "nexus"
]

[workspace.dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive", "env"] }
criterion = "0.5.1"
ere-zkvm-interface = { git = "https://github.com/eth-act/ere", tag = "v0.0.13" }
env_logger = "0.10.0"
hex = "0.4.3"
itertools = "0.13.0"
log = "0.4.14"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10"
tracing = "0.1.40"

# Local
utils = { path = "utils" }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
