[package]
name = "binius"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
anyhow = { workspace = true }
alloy-primitives = "0.8.14"
array-util = "1.0.2"
binius_circuits = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_core = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_field = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_hal = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_hash = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_m3 = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_macros = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_math = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_utils = { git = "https://github.com/alxkzmn/binius", default-features = false }
bumpalo = { version = "3.16.0", features = ["collections"] }
bytemuck = { version = "1.18.0", features = [
    "derive",
    "min_const_generics",
    "must_cast",
] }
bytesize = "1.3.0"
clap = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
tracing-profile = "0.10.3"
tracing = { workspace = true }
criterion = { workspace = true }
utils = { workspace = true }

[[bench]]
name = "sha256_bench"
harness = false

[[bin]]
name = "measure_mem_with_lookup"
path = "src/bin/measure_mem_with_lookup.rs"

[[bin]]
name = "measure_mem_no_lookup"
path = "src/bin/measure_mem_no_lookup.rs"

[[bin]]
name = "sha256_with_lookup_mem"
path = "src/bin/sha256_with_lookup_mem.rs"

[[bin]]
name = "sha256_no_lookup_mem"
path = "src/bin/sha256_no_lookup_mem.rs"
