[package]
name = "cairo-m"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
serde_json = { version = "1.0" }
utils = { path = "../utils" }

# Cairo
cairo-m-common = { git = "https://github.com/kkrt-labs/cairo-m", tag = "v0.1.0-alpha.1" }
cairo-m-runner = { git = "https://github.com/kkrt-labs/cairo-m", tag = "v0.1.0-alpha.1" }
cairo-m-prover = { git = "https://github.com/kkrt-labs/cairo-m", tag = "v0.1.0-alpha.1" }
cairo-m-compiler = { git = "https://github.com/kkrt-labs/cairo-m", tag = "v0.1.0-alpha.1" }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", features = ["parallel"], rev = "ab57a1c" }

[dev-dependencies]
criterion = "0.5.1"

# TODO: Remove this patch when re-add the "cairo-m" as workspace member
# patch for "cairo-m" 
[patch."https://github.com/HorizenLabs/poseidon2.git"]
zkhash = { git = "https://github.com/AntoineFONDEUR/poseidon2.git", branch = "poseidon2-M31" }

[[bench]]
name = "sha256_bench"
harness = false

[[bin]]
name = "sha256_mem_cairo_m"
path = "src/bin/sha256_mem.rs"
