[package]
name = "jolt-benchmarks"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["sha2-guest"]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev = "edce59e951725973f425ff4d04f1ac19de0ece8e", features = [
    "host",
] }
hex = { workspace = true }
sha2-guest = { path = "./sha2-guest" }
utils = { workspace = true }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
