[package]
name = "jolt"
version = "0.1.0"
edition = "2024"

[dependencies]
ere-jolt = { git = "https://github.com/eth-act/ere", rev = "215a326995578a564871100d1b7b335f400c4fd1" }

# Workspace
bincode = { workspace = true }
criterion = { workspace = true }
clap = { workspace = true }
utils = { workspace = true }
zkvm-interface = { workspace = true }

[[bench]]
name = "sha256"
harness = false

[[bin]]
name = "sha256_mem_jolt"
path = "src/bin/sha256_mem.rs"
