[package]
name = "miden"
version = "0.1.0"
edition = "2024"

[dependencies]
ere-miden = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }

# Workspace
criterion = { workspace = true }
clap = { workspace = true }
utils = { workspace = true }
zkvm-interface = { workspace = true }

[[bench]]
name = "sha256"
harness = false

[[bin]]
name = "sha256_mem_miden"
path = "src/bin/sha256_mem.rs"
