[package]
name = "noir"
version = "0.1.0"
edition = "2024"

[dependencies]
noir_rs = { git = "https://github.com/zkpassport/noir_rs.git", tag = "v1.0.0-beta.3-1", features = ["barretenberg"] }

anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "sha256_bench"
harness = false

[[bin]]
name = "sha256_mem"
path = "src/bin/sha256_mem.rs"
