[package]
name = "openvm"
version = "0.1.0"
edition = "2024"

[dependencies]
# disable CUDA 
ere-openvm = { git = "https://github.com/eth-act/ere", tag = "v0.0.13", default-features = false }

# Workspace
criterion = { workspace = true }
clap = { workspace = true }
utils = { workspace = true }
ere-zkvm-interface = { workspace = true }
bincode = { workspace = true }
toml = "0.9.8"

[[bench]]
name = "sha256"
harness = false

[[bin]]
name = "sha256_mem_openvm"
path = "src/bin/sha256_mem.rs"
