[package]
name = "plonky2_sha256"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = "1.0.2"
anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
plonky2_u32 = { git = "https://github.com/alxkzmn/plonky2-u32", rev = "167d8a6" }
criterion = { workspace = true }
utils = { workspace = true }
clap = { workspace = true }

[[bench]]
name = "prove_verify"
harness = false

[[bin]]
name = "measure_mem"
path = "src/bin/measure_mem.rs"

[[bin]]
name = "sha256_no_lookup_mem"
path = "src/bin/sha256_no_lookup_mem.rs"
