[package]
name = "sha"
version = "0.1.0"
edition = "2024"

[features]
default = []
simd = ["powdr/plonky3-simd"]

[dependencies]
powdr = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.3", features = ["plonky3"] }

serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
  "rc",
] }
serde_cbor = { version = "0.11.2", default-features = false, features = [
  "alloc",
] }

env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
criterion = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
memory-stats = { workspace = true }

[[bench]]
name = "prove_verify"
harness = false

[[bin]]
name = "measure"
path = "src/bin/measure.rs"



