[package]
name = "sha"
version = "0.1.0"
edition = "2024"
default-run = "plonky3-powdr-sha"

[features]
default = []
simd = ["powdr/plonky3-simd"]

[dependencies]
powdr = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.3", features = [
  "plonky3",
] }

serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
  "rc",
] }
serde_cbor = { version = "0.11.2", default-features = false, features = [
  "alloc",
] }

env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
criterion = { workspace = true }
utils = { workspace = true }
clap = { workspace = true }

[[bench]]
name = "prove_verify"
harness = false

[[bin]]
name = "measure_mem"
path = "src/bin/measure_mem.rs"

[[bin]]
name = "sha256_mem"
path = "src/bin/sha256_mem.rs"

[[bin]]
name = "plonky3-powdr-sha"
path = "src/main.rs"
