[package]
name = "sha256_expander_benchmark"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bin = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
circuit = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
circuit-std-rs = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection" }
clap = { workspace = true }
expander_compiler = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection" }
gkr = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
gkr_engine = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
gkr_hashers = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
mersenne31 = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
mpi = { git = "https://github.com/rsmpi/rsmpi", rev = "61796831954b679cbe267c1b704ddbcb7fef3715" }
poly_commit = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
rand = { workspace = true }
serdes = { git = "https://github.com/PolyhedraZK/Expander", branch = "main"}
sha2 = { workspace = true }
transcript = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
utils = { workspace = true }
paste = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "prove_verify"
harness = false

[[bin]]
name = "sha256_mem"
path = "src/bin/sha256_mem.rs"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
