[package]
name = "provekit"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
utils = { workspace = true }
criterion = { workspace = true }
clap = { workspace = true }
noir-r1cs = { git = "https://github.com/worldfnd/ProveKit", branch = "main" }

[[bin]]
name = "measure_mem"
path = "src/bin/measure_mem.rs"

[[bin]]
name = "sha256_mem"
path = "src/bin/sha256_mem.rs"

[[bench]]
name = "prove_verify"
harness = false
