[package]
name = "provekit"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
utils = { workspace = true }
criterion = { workspace = true }
clap = { workspace = true }
noir-r1cs = { git = "https://github.com/worldfnd/ProveKit", rev = "6f0e6e4987f1520fd5b31786674f87c1bd567aa1"}

[[bin]]
name = "sha256_mem_provekit"
path = "src/bin/sha256_mem.rs"

[[bench]]
name = "prove_verify"
harness = false
