[package]
name = "provekit"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
utils = { workspace = true }
criterion = { workspace = true }
clap = { workspace = true }
provekit-common = { git = "https://github.com/worldfnd/ProveKit", rev = "d7deea66c41d56c1d411dd799d0d6066272323e4"}
provekit-r1cs-compiler = { git = "https://github.com/worldfnd/ProveKit", rev = "d7deea66c41d56c1d411dd799d0d6066272323e4"}
provekit-prover = { git = "https://github.com/worldfnd/ProveKit", rev = "d7deea66c41d56c1d411dd799d0d6066272323e4"}
provekit-verifier = { git = "https://github.com/worldfnd/ProveKit", rev = "d7deea66c41d56c1d411dd799d0d6066272323e4"}

[[bin]]
name = "sha256_mem_provekit"
path = "src/bin/sha256_mem.rs"

[[bin]]
name = "ecdsa_mem_provekit"
path = "src/bin/ecdsa_mem.rs"

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "ecdsa"
harness = false