[package]
name = "risc0-benchmark"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["methods"]

[workspace.dependencies]
risc0-build = "2.2.0"

[dependencies]
risc0-benchmark-methods = { path = "methods" }
risc0-zkvm = { version = "2.2.0", features = ["prove"] }
utils = { path = "../utils" }

[features]
default = []
prove = ["risc0-zkvm/prove"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
