[package]
name = "risc0-benchmark"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["methods"]

[workspace.dependencies]
risc0-build = { version = "^2.3.0", features = ["unstable"] }

[dependencies]
risc0-benchmark-methods = { path = "methods" }
risc0-zkvm = { version = "^2.3.0", features = ["unstable", "prove"] }
utils = { path = "../utils" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
