[package]
name = "sp1"
version = "0.1.0"
edition = "2024"

[dependencies]
ere-sp1 = { git = "https://github.com/eth-act/ere", tag = "v0.0.13" }
bincode = { workspace = true }

# Workspace
criterion = { workspace = true }
clap = { workspace = true }
utils = { workspace = true }
ere-zkvm-interface = { workspace = true }

[[bench]]
name = "sha256"
harness = false

[[bin]]
name = "sha256_mem_sp1"
path = "src/bin/sha256_mem.rs"
