[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_with = "3.8"
serde_json = { workspace = true }
tabled = "0.15"
csv = "1.1"
human-repr = { version = "1.0", features = ["1024"] }
libc = "0.2"
glob = "0.3"
rand = { workspace = true }
sha2 = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
regex = "1"
criterion = { version = "0.5", default-features = false }
bincode = { workspace = true }
zkvm-interface = { workspace = true }

[[bin]]
name = "collect_benchmarks"
path = "src/bin/collect_benchmarks.rs"

[[bin]]
name = "format_hyperfine"
path = "src/bin/format_hyperfine.rs"
