[package]
name = "zkvm-csp-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
utils = { path = "../utils" }

# Ere
ere-jolt = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }
ere-miden = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }
ere-risc0 = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }
ere-sp1 = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }
zkvm-interface = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }

# Jolt patches
[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }

[dev-dependencies]
sha2 = "0.10"

[[bench]]
name = "sha256"
harness = false
