[package]
name = "zkvm-csp-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
clap = "4.5.42"
criterion = "0.7.0"
erased-serde = "0.4.6"
rand = "0.9.2"
serde = "1.0.219"
tempfile = "3.20.0"

# Ere
ere-jolt = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }
ere-miden = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }
ere-risc0 = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }
ere-sp1 = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }
zkvm-interface = { git = "https://github.com/eth-act/ere", tag = "v0.0.12" }

# Jolt patches
[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }

[dev-dependencies]
sha2 = "0.10.9"
