[package]
name = "ere-miden-sha256"
version = "0.1.0"
edition = "2024"

[dependencies]
zkvm-interface = { git = "https://github.com/brech1/ere", package = "zkvm-interface", branch = "feat/miden" }
ere-miden = { git = "https://github.com/brech1/ere", package = "ere-miden", branch = "feat/miden" }
utils = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "sha256_bench"
harness = false
