[package]
name = "ere-risc0-sha256"
version = "0.1.0"
edition = "2024"

[dependencies]
zkvm-interface = { git = "https://github.com/eth-act/ere", package = "zkvm-interface" }
ere-risc0 = { git = "https://github.com/eth-act/ere", package = "ere-risc0" }
utils = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "sha256_bench"
harness = false
