[package]
version = "0.1.0"
name = "sha-script"
edition = "2024"
default-run = "sha"

[[bin]]
name = "sha"
path = "src/bin/main.rs"

[[bin]]
name = "measure"
path = "src/bin/measure.rs"

[dependencies]
sp1-sdk = { version = "4.1.7", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { workspace = true }
tracing = { workspace = true }
sha-lib = { path = "../lib" }
criterion = { workspace = true }
bincode = "1.3.3"
utils ={ path = "../../utils"}

[build-dependencies]
sp1-helper = "4.1.7"

[[bench]]
name = "prove_verify"
harness = false
