[package]
version = "0.1.0"
name = "sha-script"
edition = "2024"
default-run = "plonky3-sp1-sha"

[[bin]]
name = "plonky3-sp1-sha"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "4.1.7", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { workspace = true }
tracing = { workspace = true }
sha-lib = { path = "../lib" }
criterion = { workspace = true }
bincode = { workspace = true }
utils = { workspace = true }

[build-dependencies]
sp1-helper = "4.1.7"

[[bench]]
name = "prove_verify"
harness = false
