[package]
name = "nexus-sha256"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-rt = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "v0.3.4" }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.9", default-features = false }

[features]
cycles = []
[workspace]
