[package]
name = "risc0-ecdsa"
version = "0.1.0"
edition = "2024"

[dependencies]
risc0-zkvm = { version = "3.0.3", default-features = false, features = [
    "std",
    "unstable",
] }
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
], default-features = false }
bincode = "1.3"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }

[workspace]
